<resources>
    <string name="app_name">MAL Project</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="label_top_rated">Top rated</string>
    <string name="label_most_popular">Most popular</string>
    <string name="label_favourites">Favourites</string>
    <string name="label_trailers">Trailers</string>
    <string name="label_share">Share</string>
    <string name="label_reviews">Reviews</string>
    <string name="label_overview">Overview</string>
    <string name="movie_test_title">Sherlock Holmes</string>
    <string name="movie_test_overview">jkhjkgfjszxbnmhgud,mjghfcgbnjugiyfutgvbhgfyjvbjgkvhrsgdxnjlhgff</string>
    <string name="label_duration">Duration</string>
    <string name="label_released">Released date : </string>
    <string name="label_votes">Votes</string>
    <string name="label_popularity">Popularity</string>
    <string name="label_language">Language</string>
    <string name="title_activity_details">Details</string>
    <string name="label_movies">Movies</string>
    <string name="label_trailer">Trailer</string>
    <string name="label_ok">Ok</string>
    <string name="msg_server_not_available">Server is not available ,Try again !!</string>
    <string name="msg_loading">Loading...</string>
    <string name="msg_please_wait">Please wait</string>
    <string name="msg_try_again">Try again</string>
    <string name="label_no_trailers">No trailers found</string>
    <string name="label_no_reviews">No reviews found for this movie</string>
    <string name="label_vote_average">Vote Average : </string>
</resources>
