<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/windowBackground">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/details_collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/details_poster_imageView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:src="@drawable/movie_img"
                app:layout_collapseMode="parallax"/>

            <android.support.v7.widget.Toolbar
                android:id="@+id/details_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:layout_collapseMode="pin"
                />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="140dp"
                android:layout_height="180dp"
                android:background="@drawable/bg_frame"
                android:gravity="center"
                android:layout_marginLeft="10dp">

            <ImageView
                android:id="@+id/details_img_imageView"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/movie_img"
                android:layout_margin="5dp"
                />
            </LinearLayout>

            <LinearLayout
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                >

                <TextView
                    android:id="@+id/details_movie_title_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="3"
                    android:padding="8dp"
                    android:text="@string/movie_test_title"
                    android:textColor="@color/navigationBarColor"
                    android:textStyle="bold"
                    android:textSize="22dp"
                    android:layout_gravity="center"
                    />

                <TextView
                    android:id="@+id/details_movie_release_date_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="3"
                    android:padding="8dp"
                    android:text="@string/label_released"
                    android:textColor="@color/navigationBarColor"
                    android:textSize="14dp"
                    android:layout_marginLeft="25dp"
                    android:layout_gravity="left|center_vertical"/>

                <TextView
                    android:id="@+id/details_movie_duration_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="3"
                    android:padding="8dp"
                    android:text="@string/label_duration"
                    android:textColor="@color/navigationBarColor"
                    android:textSize="14dp"
                    android:layout_marginLeft="25dp"
                    android:layout_gravity="left|center_vertical"/>

                <ImageButton
                    android:id="@+id/details_favourite_imageButton"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/favourite_image_button"
                    android:layout_gravity="bottom|center"/>

            </LinearLayout>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="2sp"
            android:layout_margin="10dp"
            android:background="@android:color/darker_gray" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:orientation="horizontal"
                    android:layout_margin="5dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="left|center_vertical"
                        android:gravity="center"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="25dp">
                        <Button
                            android:id="@+id/details_vote_button"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:background="@drawable/btn_background"
                            android:text="8.3"
                            android:textColor="@android:color/white"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_votes"
                            android:layout_marginTop="5dp"
                            android:textSize="15sp"
                            android:textColor="@color/navigationBarColor"
                            />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center|center_vertical"
                        android:gravity="center"
                        android:layout_marginRight="25dp"
                        android:layout_marginLeft="25dp">
                        <Button
                            android:id="@+id/details_popularity_button"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:background="@drawable/btn_background"
                            android:text="4.3"
                            android:textColor="@android:color/white"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_popularity"
                            android:layout_marginTop="5dp"
                            android:textSize="15sp"
                            android:textColor="@color/navigationBarColor"
                            />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_gravity="right|center_vertical"
                        android:gravity="center"
                        android:layout_marginRight="25dp"
                        android:layout_marginLeft="30dp">
                        <Button
                            android:id="@+id/details_language_button"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:background="@drawable/btn_background"
                            android:text="en"
                            android:textColor="@android:color/white"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_language"
                            android:layout_marginTop="5dp"
                            android:textSize="15sp"
                            android:textColor="@color/navigationBarColor"
                            />
                    </LinearLayout>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2sp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@android:color/darker_gray" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_overview"
                    android:textColor="@color/navigationBarColor"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:textSize="25sp"
                    android:maxLines="3"
                    android:padding="8dp"
                    android:textStyle="bold"

                    />

                <TextView
                    android:id="@+id/details_overviews_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_test_overview"
                    android:textColor="@color/navigationBarColor"
                    android:layout_margin="10dp"
                    android:textSize="15sp"
                    />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2sp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@android:color/darker_gray" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_trailers"
                    android:textColor="@color/navigationBarColor"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:textSize="25sp"
                    android:maxLines="3"
                    android:padding="8dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_no_trailers"
                    android:textColor="@color/navigationBarColor"
                    android:id="@+id/details_no_trailers_textView"
                    android:visibility="gone"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:textSize="25sp"
                    android:maxLines="3"
                    android:padding="8dp"
                    android:textStyle="bold" />

                <ListView
                    android:id="@+id/details_trailers_list"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent">
                </ListView>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2sp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@android:color/darker_gray" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_reviews"
                    android:textColor="@color/navigationBarColor"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:textSize="25sp"
                    android:maxLines="3"
                    android:padding="8dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_no_reviews"
                    android:visibility="gone"
                    android:id="@+id/details_no_reviews_textView"
                    android:textColor="@color/navigationBarColor"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:textSize="25sp"
                    android:maxLines="3"
                    android:padding="8dp"
                    android:textStyle="bold" />

                <ListView
                    android:id="@+id/details_reviews_list"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent">
                </ListView>

            </LinearLayout>
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
